updates to fix spacing

--- a/style.css
+++ b/style.css
@@ -4,9 +4,14 @@ body {
   background-size: cover;
 }
 
-#headshot {
+.headshot {
+  margin:auto;
+  text-align: center;
+}
+
+#headshot2 {
   height: 200px;
-  margin: 0,50px,0,0;
+  margin: auto;
 }
 
 .bio-text {
@@ -62,7 +67,7 @@ h2 {
   font-size: 18px;
   font-family: Open Sans Semibold, sans-serif;
   color: #ffffff;
-  margin: 2%;
+  margin: 2% 0;
 }
 
 a {
@@ -91,16 +96,18 @@ nav a {
 }
 
 .gaimage {
-  float: left;
+  /*float: left;*/
   margin:2% 2%;
 }
 
-.hmwk {
+/*.hmwk {
   float: left;
-}
+}*/
 
 .ga ul {
   display: inline-block;
+  text-align: left;
+  padding: 0;
 }
 
 .ga li {
